--- a/composer.json
+++ b/composer.json
@@ -86,11 +86,16 @@
     "moontoast/math": "^1.1",
     "orchestra/testbench-core": "^4.0",
     "pda/pheanstalk": "^4.0",
+    "phpstan/phpstan": "~0.12",
     "phpunit/phpunit": "^7.5.15|^8.4|^9.0",
     "predis/predis": "^1.1.1",
-    "symfony/cache": "^4.3.4",
     "squizlabs/php_codesniffer": "3.*",
-    "phpstan/phpstan": "~0.12"
+    "symfony/cache": "^4.3.4"
+  },
+  "autoload": {
+    "psr-4": {
+      "Illuminate\\": "src/Illuminate/"
+    }
   },
   "suggest": {
     "ext-gd": "Required to use Illuminate\\Http\\Testing\\FileFactory::image().",
