--- a/composer.json
+++ b/composer.json
@@ -89,7 +89,7 @@
     "phpstan/phpstan": "~0.12",
     "phpunit/phpunit": "^7.5.15|^8.4|^9.0",
     "predis/predis": "^1.1.1",
-    "squizlabs/php_codesniffer": "3.*",
+    "squizlabs/php_codesniffer": "~3.5",
     "symfony/cache": "^4.3.4"
   },
   "autoload": {
