--- a/composer.json
+++ b/composer.json
@@ -93,6 +93,9 @@
     "symfony/cache": "^4.3.4"
   },
   "autoload": {
+    "files": [
+      "src/Illuminate/Support/helpers.php"
+    ],
     "psr-4": {
       "Illuminate\\": "src/Illuminate/"
     }
