--- a/composer.json
+++ b/composer.json
@@ -94,7 +94,8 @@
   },
   "autoload": {
     "files": [
-      "src/Illuminate/Support/helpers.php"
+      "src/Illuminate/Support/helpers.php",
+      "src/Illuminate/Foundation/helpers.php"
     ],
     "psr-4": {
       "Illuminate\\": "src/Illuminate/"
